kubernetes/services/immich.yml
---
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 2283
  selector:
    app: immich

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: default
spec:
  tls:
    - hosts:
        - immich.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: immich.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: default
  labels:
    app: immich
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: ghcr.io/immich-app/immich-server:release
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: 2000m
          ports:
            - name: web
              containerPort: 2283
          volumeMounts:
            - name: data
              mountPath: /usr/src/app/upload
        - name: jobs
          image: ghcr.io/immich-app/immich-server:release
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 4Gi
              cpu: 2000m
          volumeMounts:
            - name: data
              mountPath: /usr/src/app/upload
      volumes:
        - name: data
          hostPath:
            path: /storage/immich/data

---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3003
  selector:
    app: immich-machine-learning

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: default
  labels:
    app: immich-machine-learning
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: app
          image: ghcr.io/immich-app/immich-machine-learning:release
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 4Gi
              cpu: 2000m
          ports:
            - name: web
              containerPort: 3003
          volumeMounts:
            - name: cache
              mountPath: /cache
              subPath: cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-machine-learning
